Fixed test regression.